src/main/java/com/example/book/web/rest/errors/ErrorConstants.java
package com.example.book.web.rest.errors;

public class ErrorConstants {

	public static final String BAD_REQUEST = "Bad Request";
	public static final String TITLE_NULL = "Title cannot be null";
	public static final int CODE_BAD_REQUEST = 4003;
	public static final String DATA_NOT_FOUND = "Data not found";
	public static final String ID_NOT_FOUND = "Given id not found";
	public static final int CODE_NOT_FOUND = 4004;
}
